fixed some issues on mobile

--- a/pitches/style.css
+++ b/pitches/style.css
@@ -201,7 +201,7 @@ textarea[class='inputText'] {
     }
     
     #lastcheck {
-        margin-bottom: 0px;
+        margin-bottom: 20px;
     }
 }
 
